--- a/cr-frontend/index.html
+++ b/cr-frontend/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Open Graph / Social Media Preview -->
+    <meta property="og:title" content="CodeRunner" />
+    <meta property="og:description" content="IDE-like interface for writing, compiling, and executing code in multiple programming languages" />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CodeRunner" />
+    <meta name="twitter:description" content="IDE-like interface for writing, compiling, and executing code in multiple programming languages" />
+    <meta name="twitter:image" content="/logo.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:wght@700&display=swap" rel="stylesheet">
-    <title>cr-frontend</title>
+    <title>CodeRunner</title>
   </head>
   <body>
     <div id="root"></div>
